chore(.gitignore): updated gitignore

--- a/notebook/fiddle.ipynb
+++ b/notebook/fiddle.ipynb
@@ -2,15 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  download_url, download_folder, file_path, train_dataset_folder, test_dataset_folder\n",
+    "#  download_url, download_folder, extracted_folder, file_path, train_dataset_folder, test_dataset_folder\n",
+    "DataIngestionConfig = namedtuple(\n",
+    "    \"DataIngestionConfig\",\n",
+    "    [\"dataset_download_url\", \"tgz_download_dir\", \"raw_data_dir\", \"ingested_train_dir\", \"ingested_test_dir\"],\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataIngestionConfig(dataset_download_url='1')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 (conda)",
+   "display_name": "Python 3.8.13 (conda)",
    "language": "python",
    "name": "python3"
   },
